# axum-one

./: Cargo.toml
src/: ctx.rs  error.rs  lib.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
